--- a/estilos.css
+++ b/estilos.css
@@ -159,13 +159,14 @@ text-align: right;
 }
 
 .card-selicionada {
+    background: #4285f4ba;
     padding-top: 20px;
     width: 30%;
     text-align: center;
     height: 300px;
     box-shadow: 0 0 3px 0 rgba(0, 0, 0, .5);
-    transform: scale(1.03);
-    cursor: pointer;
+    transform: scale(1);
+    transition: transform 0.6s;
 }
 
 .card i {
